# filewatch

./: .clang-format  CMakeLists.txt  FileWatch.hpp
tests/: CMakeLists.txt  Test.cpp
tests/Util/: TestHelper.hpp
